--- a/index.html
+++ b/index.html
@@ -23,12 +23,28 @@
   h1 {
     color: #3a8edc;
   }
+  .image-container {
+    margin-top: 20px;
+  }
+  .image-container img {
+    width: 100%;
+    max-width: 250px;
+    margin: 10px;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  }
 </style>
 </head>
 <body>
   <div class="container">
     <h1>Welcome to My New Site</h1>
     <p>This is just a simple paragraph while I develop the full site. Stay tuned!</p>
+    
+    <div class="image-container">
+      <img src="img1.jpeg" alt="Image 1">
+      <img src="img2.jpeg" alt="Image 2">
+    </div>
   </div>
 </body>
 </html>
+
